--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
                 <img src="https://images-ext-1.discordapp.net/external/qU_Ae6B0teNF7k83rusUYvUiH9eZvY5iL2ZfpYEk7n4/%3Fsize%3D1024/https/cdn.discordapp.com/icons/1309173138256297996/17b2ea3514ac54a0df24341988e266ce.png?format=webp&quality=lossless&width=204&height=204"
                     alt="WAR Logo">
             </a>
-            <h1>Coming Soon: WAR Season</h1>
+            <h1>Coming Soon: WAR Season 2</h1>
             <div id="countdown"></div>
         </div>
         <div class="right-section">
