--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <meta property="og:description" content="Below are the updated team rankings for the BSC Council, providing a comprehensive view of the teams’ current standings based on their recent performances." />
   <meta property="og:image" content="https://media.discordapp.net/attachments/1362730093377622036/1365708639523831829/image.png?ex=680e4ac9&is=680cf949&hm=25cef20f9503cc628b5fb1273ebb3af0edf497e02b170b5f144c6501d67981c3&=&format=webp&quality=lossless&width=1872&height=761" />
   <meta property="og:url" content="https://bsc-council.vercel.app/" />
-  <meta name="twitter:card" content="https://media.discordapp.net/attachments/1362730093377622036/1365708639523831829/image.png?ex=680e4ac9&is=680cf949&hm=25cef20f9503cc628b5fb1273ebb3af0edf497e02b170b5f144c6501d67981c3&=&format=webp&quality=lossless&width=1872&height=761" />
+  <meta name="twitter:card" content="" />
 </head>
 
   <style>
