--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
   <meta property="og:title" content="Blitz Soccer Confederation | Team Rankings" />
   <meta property="og:description" content="Below are the updated team rankings for the BSC Council, providing a comprehensive view of the teams’ current standings based on their recent performances." />
-  <meta property="og:image" content="https://media.discordapp.net/attachments/1362730093377622036/1365708639523831829/image.png?format=webp&quality=lossless&width=1872&height=761" />
+  <meta property="og:image" content="https://media.discordapp.net/attachments/1362730093377622036/1365710018678227095/image.png?ex=680e4c12&is=680cfa92&hm=6dbf7a1f42278467b3bac51c4973484d780c77b25698452c0cd7da135dc0cd25&=&format=webp&quality=lossless&width=1855&height=771" />
   <meta property="og:url" content="https://bsc-council.vercel.app/" />
   <meta name="twitter:card" content="summary_large_image" />
 </head>
