--- a/index.html
+++ b/index.html
@@ -363,8 +363,7 @@
         <tr>
           <td>15</td>
           <td class="team-name"><img class="team-logo"
-              src="https://media.discordapp.net/attachments/1362730093377622036/1365677210375159889/raw-1.png?ex=680e2d84&is=680cdc04&hm=01dcf3b199d57eae18aa1a98cea404f4202709b4bfd458fe5766f2478c10b417&=&format=webp&quality=lossless&width=771&height=771">Koala
-            Undefined</td>
+              src="https://media.discordapp.net/attachments/1362730093377622036/1365708829634859159/b0ec1beb-a7bb-458e-8a0a-f4cf1b2016dd_1.png?ex=680e4af6&is=680cf976&hm=bd9d0e0d384a6fc4034f68adc5a82a004d5ae2f5b39c4e7198c0f41e9185e546&=&format=webp&quality=lossless&width=875&height=875">Dudhe Sona Ekadosh</td>
           <td>0</td>
           <td>13.33</td>
           <td>8.33</td>
