--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
     <nav>
       <a href="#">Home</a>
       <a href="rankings.html">Rankings</a>
-      <a href="tournaments.html">Tournaments</a>
+      <a href="standings.html">Tournaments</a>
       <a href="#">About</a>
     </nav>
   </header>
@@ -162,9 +162,9 @@
     </div>
 
     <div class="card">
-      <h2>Ongoing Tournament</h2>
+      <h2>Ongoing Tournament - Points Table</h2>
       <p>Follow the action and stay updated with the latest matches!</p>
-      <a href="tournaments.html">View Tournament</a>
+      <a href="standings.html">View Points Table</a>
     </div>
   </section>
 
