--- a/rankings.html
+++ b/rankings.html
@@ -130,9 +130,11 @@
 <body>
   <header>
     <div class="header-content">
+    <a href="https://bsc-council.vercel.app/">
       <img
         src="https://images-ext-1.discordapp.net/external/21o_0UZoKsOsPNzp5xddRvljTtd790zQuAHo8MQN45M/%3Fsize%3D1024/https/cdn.discordapp.com/icons/1362716935912951818/7d013741eb879778d59320a5af9dd07e.png?format=webp&quality=lossless&width=875&height=875"
         alt="Blitz Logo">
+    </a>
       <h1>Blitz Soccer Confederation - Team Rankings</h1>
     </div>
     <h4>Updated on 26th April 2025</h4>
