--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
 <body>
 
   <header>
-    <img src="bsc-logo.png" alt="BSC Council Logo">
+    <img src="https://images-ext-1.discordapp.net/external/21o_0UZoKsOsPNzp5xddRvljTtd790zQuAHo8MQN45M/%3Fsize%3D1024/https/cdn.discordapp.com/icons/1362716935912951818/7d013741eb879778d59320a5af9dd07e.png?format=webp&quality=lossless&width=875&height=875" alt="BSC Council Logo">
     <nav>
       <a href="#">Home</a>
       <a href="rankings.html">Rankings</a>
