--- a/standings.html
+++ b/standings.html
@@ -8,6 +8,8 @@
 <meta property="og:image" content="https://media.discordapp.net/attachments/1363072691636146272/1365964156708196404/image.png?ex=680f38c1&is=680de741&hm=e07d71a5d7a71248fe339ee9603593909f812d5a95965f33e1f435811155d248&=&format=webp&quality=lossless" />
 <meta property="og:url" content="https://bsc-council.vercel.app/standings.html" />
 <meta property="og:type" content="website" />
+<meta property="twitter:card" content="summary_large_image" />  
+<meta property="twitter:image" content="https://media.discordapp.net/attachments/1363072691636146272/1365964156708196404/image.png?ex=680f38c1&is=680de741&hm=e07d71a5d7a71248fe339ee9603593909f812d5a95965f33e1f435811155d248&=&format=webp&quality=lossless" />
 
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
