--- a/standings.html
+++ b/standings.html
@@ -6,6 +6,20 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Blitz Soccer Confederation - Standings</title>
   <style>
+    <style type="text/css">
+  </style>
+  <title>Standings | BSC Champions & Europa League </title>
+  <meta name="description" content="Current standings BSC Champions & Europa League">
+  <meta property="og:title" content="Standings | BSC Champions & Europa League">
+  <meta property="og:description" content="Standings | BSC Champions & Europa League">
+  <meta property="og:image"
+    content="https://media.discordapp.net/attachments/1362730093377622036/1366825115651801231/image.png?ex=68125a95&is=68110915&hm=bce3cfe59bf35a00bee20e48648f175c6e23629ec6a6c94e64b6aaef044368c8&=&format=webp&quality=lossless&width=1872&height=536">
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="Standings | BSC Champions & Europa League">
+  <meta name="twitter:description" content="Current standings BSC Champions & Europa League">
+  <meta name="twitter:image"
+    content="https://media.discordapp.net/attachments/1362730093377622036/1366825115651801231/image.png?ex=68125a95&is=68110915&hm=bce3cfe59bf35a00bee20e48648f175c6e23629ec6a6c94e64b6aaef044368c8&=&format=webp&quality=lossless&width=1872&height=536">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
     :root {
       --cl-blue: #0055A4;
       --cl-dark-blue: #003366;
