--- a/standings.html
+++ b/standings.html
@@ -219,19 +219,19 @@
         <tr>
           <td>1</td>
           <td>Olympus FC</td>
-          <td>2</td>
-          <td>2</td>
-          <td>0</td>
-          <td>0</td>
+          <td>3</td>
           <td>3</td>
           <td>0</td>
-          <td>+3</td>
-          <td>6</td>
+          <td>0</td>
+          <td>4</td>
+          <td>0</td>
+          <td>+4</td>
+          <td>9</td>
           <td>
             <div class="form-indicator">
               <div class="form-dot win"></div>
               <div class="form-dot win"></div>
-              <div class="form-dot not-played"></div>
+              <div class="form-dot win"></div>
               <div class="form-dot not-played"></div>
               <div class="form-dot not-played"></div>
             </div>
@@ -240,19 +240,19 @@
         <tr>
           <td>2</td>
           <td>Pro Challengers</td>
+          <td>3</td>
           <td>2</td>
-          <td>2</td>
-          <td>0</td>
+          <td>1</td>
           <td>0</td>
           <td>2</td>
           <td>0</td>
           <td>+2</td>
-          <td>6</td>
+          <td>7</td>
           <td>
             <div class="form-indicator">
               <div class="form-dot win"></div>
               <div class="form-dot win"></div>
-              <div class="form-dot not-played"></div>
+              <div class="form-dot draw"></div>
               <div class="form-dot not-played"></div>
               <div class="form-dot not-played"></div>
             </div>
@@ -261,19 +261,19 @@
         <tr>
           <td>3</td>
           <td>Real Exodus</td>
+          <td>3</td>
           <td>2</td>
           <td>1</td>
-          <td>1</td>
           <td>0</td>
-          <td>1</td>
+          <td>2</td>
           <td>0</td>
-          <td>+1</td>
-          <td>4</td>
+          <td>+2</td>
+          <td>7</td>
           <td>
             <div class="form-indicator">
               <div class="form-dot win"></div>
               <div class="form-dot draw"></div>
-              <div class="form-dot not-played"></div>
+              <div class="form-dot win"></div>
               <div class="form-dot not-played"></div>
               <div class="form-dot not-played"></div>
             </div>
@@ -282,19 +282,19 @@
         <tr>
           <td>4</td>
           <td>Sovereign Tridents</td>
-          <td>2</td>
+          <td>3</td>
           <td>1</td>
-          <td>0</td>
+          <td>1</td>
           <td>1</td>
           <td>3</td>
           <td>2</td>
           <td>+1</td>
-          <td>3</td>
+          <td>4</td>
           <td>
             <div class="form-indicator">
               <div class="form-dot loss"></div>
               <div class="form-dot win"></div>
-              <div class="form-dot not-played"></div>
+              <div class="form-dot draw"></div>
               <div class="form-dot not-played"></div>
               <div class="form-dot not-played"></div>
             </div>
@@ -302,20 +302,20 @@
         </tr>
         <tr>
           <td>5</td>
-          <td>Baharselona</td>
-          <td>1</td>
+          <td>Silent Oblivion</td>
+          <td>3</td>
           <td>0</td>
+          <td>2</td>
           <td>1</td>
-          <td>0</td>
-          <td>1</td>
-          <td>1</td>
-          <td>0</td>
-          <td>1</td>
+          <td>2</td>
+          <td>4</td>
+          <td>-2</td>
+          <td>2</td>
           <td>
             <div class="form-indicator">
               <div class="form-dot draw"></div>
-              <div class="form-dot not-played"></div>
-              <div class="form-dot not-played"></div>
+              <div class="form-dot loss"></div>
+              <div class="form-dot draw"></div>
               <div class="form-dot not-played"></div>
               <div class="form-dot not-played"></div>
             </div>
@@ -323,6 +323,48 @@
         </tr>
         <tr>
           <td>6</td>
+          <td>Stevie Slippers</td>
+          <td>3</td>
+          <td>0</td>
+          <td>2</td>
+          <td>1</td>
+          <td>3</td>
+          <td>5</td>
+          <td>-2</td>
+          <td>2</td>
+          <td>
+            <div class="form-indicator">
+              <div class="form-dot draw"></div>
+              <div class="form-dot loss"></div>
+              <div class="form-dot draw"></div>
+              <div class="form-dot not-played"></div>
+              <div class="form-dot not-played"></div>
+            </div>
+          </td>
+        </tr>
+        <tr>
+          <td>7</td>
+          <td>Baharselona</td>
+          <td>2</td>
+          <td>0</td>
+          <td>1</td>
+          <td>1</td>
+          <td>1</td>
+          <td>2</td>
+          <td>-1</td>
+          <td>1</td>
+          <td>
+            <div class="form-indicator">
+              <div class="form-dot draw"></div>
+              <div class="form-dot loss"></div>
+              <div class="form-dot not-played"></div>
+              <div class="form-dot not-played"></div>
+              <div class="form-dot not-played"></div>
+            </div>
+          </td>
+        </tr>
+        <tr>
+          <td>8</td>
           <td>Garuda FC</td>
           <td>2</td>
           <td>0</td>
@@ -343,7 +385,7 @@
           </td>
         </tr>
         <tr>
-          <td>7</td>
+          <td>9</td>
           <td>Saste Nukers</td>
           <td>2</td>
           <td>0</td>
@@ -364,62 +406,20 @@
           </td>
         </tr>
         <tr>
-          <td>8</td>
-          <td>Silent Oblivion</td>
-          <td>2</td>
-          <td>0</td>
-          <td>1</td>
-          <td>1</td>
-          <td>1</td>
-          <td>3</td>
-          <td>-2</td>
-          <td>1</td>
-          <td>
-            <div class="form-indicator">
-              <div class="form-dot draw"></div>
-              <div class="form-dot loss"></div>
-              <div class="form-dot not-played"></div>
-              <div class="form-dot not-played"></div>
-              <div class="form-dot not-played"></div>
-            </div>
-          </td>
-        </tr>
-        <tr>
-          <td>9</td>
-          <td>Stevie Slippers</td>
-          <td>2</td>
-          <td>0</td>
-          <td>1</td>
-          <td>1</td>
-          <td>2</td>
-          <td>4</td>
-          <td>-2</td>
-          <td>1</td>
-          <td>
-            <div class="form-indicator">
-              <div class="form-dot draw"></div>
-              <div class="form-dot loss"></div>
-              <div class="form-dot not-played"></div>
-              <div class="form-dot not-played"></div>
-              <div class="form-dot not-played"></div>
-            </div>
-          </td>
-        </tr>
-        <tr>
           <td>10</td>
           <td>Chill Guys</td>
-          <td>1</td>
+          <td>2</td>
           <td>0</td>
           <td>0</td>
-          <td>1</td>
+          <td>2</td>
           <td>0</td>
-          <td>1</td>
-          <td>-1</td>
+          <td>2</td>
+          <td>-2</td>
           <td>0</td>
           <td>
             <div class="form-indicator">
               <div class="form-dot loss"></div>
-              <div class="form-dot not-played"></div>
+              <div class="form-dot loss"></div>
               <div class="form-dot not-played"></div>
               <div class="form-dot not-played"></div>
               <div class="form-dot not-played"></div>
@@ -473,19 +473,19 @@
         <tr>
           <td>2</td>
           <td>Disguised Clowns</td>
+          <td>3</td>
           <td>2</td>
-          <td>2</td>
+          <td>1</td>
           <td>0</td>
-          <td>0</td>
-          <td>2</td>
-          <td>0</td>
+          <td>3</td>
+          <td>1</td>
           <td>+2</td>
-          <td>6</td>
+          <td>7</td>
           <td>
             <div class="form-indicator">
               <div class="form-dot win"></div>
               <div class="form-dot win"></div>
-              <div class="form-dot not-played"></div>
+              <div class="form-dot draw"></div>
               <div class="form-dot not-played"></div>
               <div class="form-dot not-played"></div>
             </div>
@@ -493,20 +493,20 @@
         </tr>
         <tr>
           <td>3</td>
-          <td>Dudhe Sona Ekadosh</td>
+          <td>Hypercraft FC</td>
+          <td>3</td>
           <td>2</td>
-          <td>1</td>
           <td>0</td>
           <td>1</td>
           <td>3</td>
-          <td>3</td>
-          <td>0</td>
-          <td>3</td>
+          <td>1</td>
+          <td>+2</td>
+          <td>6</td>
           <td>
             <div class="form-indicator">
               <div class="form-dot win"></div>
               <div class="form-dot loss"></div>
-              <div class="form-dot not-played"></div>
+              <div class="form-dot win"></div>
               <div class="form-dot not-played"></div>
               <div class="form-dot not-played"></div>
             </div>
@@ -514,20 +514,20 @@
         </tr>
         <tr>
           <td>4</td>
-          <td>The Blues Tridents</td>
+          <td>Dudhe Sona Ekadosh</td>
+          <td>3</td>
           <td>2</td>
-          <td>1</td>
           <td>0</td>
           <td>1</td>
+          <td>5</td>
           <td>3</td>
-          <td>3</td>
-          <td>0</td>
-          <td>3</td>
+          <td>+2</td>
+          <td>6</td>
           <td>
             <div class="form-indicator">
+              <div class="form-dot win"></div>
               <div class="form-dot loss"></div>
               <div class="form-dot win"></div>
-              <div class="form-dot not-played"></div>
               <div class="form-dot not-played"></div>
               <div class="form-dot not-played"></div>
             </div>
@@ -535,20 +535,20 @@
         </tr>
         <tr>
           <td>5</td>
-          <td>Final Strike</td>
+          <td>The Blues Tridents</td>
+          <td>3</td>
+          <td>1</td>
+          <td>0</td>
           <td>2</td>
-          <td>1</td>
-          <td>0</td>
-          <td>1</td>
           <td>3</td>
-          <td>3</td>
-          <td>0</td>
+          <td>5</td>
+          <td>-2</td>
           <td>3</td>
           <td>
             <div class="form-indicator">
+              <div class="form-dot loss"></div>
               <div class="form-dot win"></div>
               <div class="form-dot loss"></div>
-              <div class="form-dot not-played"></div>
               <div class="form-dot not-played"></div>
               <div class="form-dot not-played"></div>
             </div>
@@ -556,20 +556,20 @@
         </tr>
         <tr>
           <td>6</td>
-          <td>Hypercraft FC</td>
+          <td>Final Strike</td>
+          <td>3</td>
+          <td>1</td>
+          <td>0</td>
           <td>2</td>
-          <td>1</td>
-          <td>0</td>
-          <td>1</td>
-          <td>1</td>
-          <td>1</td>
-          <td>0</td>
+          <td>3</td>
+          <td>5</td>
+          <td>-2</td>
           <td>3</td>
           <td>
             <div class="form-indicator">
               <div class="form-dot win"></div>
               <div class="form-dot loss"></div>
-              <div class="form-dot not-played"></div>
+              <div class="form-dot loss"></div>
               <div class="form-dot not-played"></div>
               <div class="form-dot not-played"></div>
             </div>
@@ -599,19 +599,19 @@
         <tr>
           <td>8</td>
           <td>Chuha Gang</td>
+          <td>3</td>
+          <td>0</td>
           <td>2</td>
-          <td>0</td>
           <td>1</td>
           <td>1</td>
-          <td>0</td>
-          <td>1</td>
+          <td>2</td>
           <td>-1</td>
-          <td>1</td>
+          <td>2</td>
           <td>
             <div class="form-indicator">
               <div class="form-dot loss"></div>
               <div class="form-dot draw"></div>
-              <div class="form-dot not-played"></div>
+              <div class="form-dot draw"></div>
               <div class="form-dot not-played"></div>
               <div class="form-dot not-played"></div>
             </div>
