--- a/standings.html
+++ b/standings.html
@@ -219,44 +219,28 @@
         <tr>
           <td>1</td>
           <td>Olympus FC</td>
-          <td>3</td>
-          <td>3</td>
-          <td>0</td>
-          <td>0</td>
           <td>4</td>
+          <td>3</td>
+          <td>1</td>
           <td>0</td>
+          <td>5</td>
+          <td>1</td>
           <td>+4</td>
-          <td>9</td>
-          <td>
-            <div class="form-indicator">
-              <div class="form-dot win"></div>
-              <div class="form-dot win"></div>
-              <div class="form-dot win"></div>
-              <div class="form-dot not-played"></div>
-              <div class="form-dot not-played"></div>
-            </div>
-          </td>
+          <td>10</td>
+          <td>🟢🟢🟢🟡⚪</td>
         </tr>
         <tr>
           <td>2</td>
           <td>Pro Challengers</td>
+          <td>4</td>
           <td>3</td>
-          <td>2</td>
           <td>1</td>
           <td>0</td>
-          <td>2</td>
+          <td>4</td>
           <td>0</td>
-          <td>+2</td>
-          <td>7</td>
-          <td>
-            <div class="form-indicator">
-              <div class="form-dot win"></div>
-              <div class="form-dot win"></div>
-              <div class="form-dot draw"></div>
-              <div class="form-dot not-played"></div>
-              <div class="form-dot not-played"></div>
-            </div>
-          </td>
+          <td>+4</td>
+          <td>10</td>
+          <td>🟢🟢🟡🟢⚪</td>
         </tr>
         <tr>
           <td>3</td>
@@ -269,120 +253,72 @@
           <td>0</td>
           <td>+2</td>
           <td>7</td>
-          <td>
-            <div class="form-indicator">
-              <div class="form-dot win"></div>
-              <div class="form-dot draw"></div>
-              <div class="form-dot win"></div>
-              <div class="form-dot not-played"></div>
-              <div class="form-dot not-played"></div>
-            </div>
-          </td>
+          <td>🟢🟡🟢⚪⚪</td>
         </tr>
         <tr>
           <td>4</td>
-          <td>Sovereign Tridents</td>
+          <td>Garuda FC</td>
           <td>3</td>
           <td>1</td>
           <td>1</td>
           <td>1</td>
-          <td>3</td>
           <td>2</td>
+          <td>1</td>
           <td>+1</td>
           <td>4</td>
-          <td>
-            <div class="form-indicator">
-              <div class="form-dot loss"></div>
-              <div class="form-dot win"></div>
-              <div class="form-dot draw"></div>
-              <div class="form-dot not-played"></div>
-              <div class="form-dot not-played"></div>
-            </div>
-          </td>
+          <td>🔴🟡🟢⚪⚪</td>
         </tr>
         <tr>
           <td>5</td>
-          <td>Silent Oblivion</td>
-          <td>3</td>
-          <td>0</td>
-          <td>2</td>
+          <td>Sovereign Tridents</td>
+          <td>4</td>
+          <td>1</td>
           <td>1</td>
           <td>2</td>
+          <td>3</td>
           <td>4</td>
-          <td>-2</td>
-          <td>2</td>
-          <td>
-            <div class="form-indicator">
-              <div class="form-dot draw"></div>
-              <div class="form-dot loss"></div>
-              <div class="form-dot draw"></div>
-              <div class="form-dot not-played"></div>
-              <div class="form-dot not-played"></div>
-            </div>
-          </td>
+          <td>-1</td>
+          <td>4</td>
+          <td>🔴🟢🟡🔴⚪</td>
         </tr>
         <tr>
           <td>6</td>
           <td>Stevie Slippers</td>
-          <td>3</td>
-          <td>0</td>
+          <td>4</td>
+          <td>1</td>
           <td>2</td>
           <td>1</td>
           <td>3</td>
+          <td>4</td>
+          <td>-1</td>
           <td>5</td>
-          <td>-2</td>
-          <td>2</td>
-          <td>
-            <div class="form-indicator">
-              <div class="form-dot draw"></div>
-              <div class="form-dot loss"></div>
-              <div class="form-dot draw"></div>
-              <div class="form-dot not-played"></div>
-              <div class="form-dot not-played"></div>
-            </div>
-          </td>
+          <td>🟡🔴🟡🟢⚪</td>
         </tr>
         <tr>
           <td>7</td>
           <td>Baharselona</td>
-          <td>2</td>
+          <td>3</td>
           <td>0</td>
-          <td>1</td>
-          <td>1</td>
+          <td>2</td>
           <td>1</td>
           <td>2</td>
+          <td>3</td>
           <td>-1</td>
-          <td>1</td>
-          <td>
-            <div class="form-indicator">
-              <div class="form-dot draw"></div>
-              <div class="form-dot loss"></div>
-              <div class="form-dot not-played"></div>
-              <div class="form-dot not-played"></div>
-              <div class="form-dot not-played"></div>
-            </div>
-          </td>
+          <td>2</td>
+          <td>🟡🔴🟡⚪⚪</td>
         </tr>
         <tr>
           <td>8</td>
-          <td>Garuda FC</td>
+          <td>Silent Oblivion</td>
+          <td>4</td>
+          <td>0</td>
           <td>2</td>
-          <td>0</td>
-          <td>1</td>
-          <td>1</td>
-          <td>0</td>
-          <td>1</td>
-          <td>-1</td>
-          <td>1</td>
-          <td>
-            <div class="form-indicator">
-              <div class="form-dot loss"></div>
-              <div class="form-dot draw"></div>
-              <div class="form-dot not-played"></div>
-              <div class="form-dot not-played"></div>
-              <div class="form-dot not-played"></div>
-            </div>
-          </td>
+          <td>2</td>
+          <td>2</td>
+          <td>6</td>
+          <td>-4</td>
+          <td>2</td>
+          <td>🟡🔴🟡🔴⚪</td>
         </tr>
         <tr>
           <td>9</td>
@@ -395,36 +331,20 @@
           <td>1</td>
           <td>-1</td>
           <td>1</td>
-          <td>
-            <div class="form-indicator">
-              <div class="form-dot draw"></div>
-              <div class="form-dot loss"></div>
-              <div class="form-dot not-played"></div>
-              <div class="form-dot not-played"></div>
-              <div class="form-dot not-played"></div>
-            </div>
-          </td>
+          <td>🟡🔴⚪⚪⚪</td>
         </tr>
         <tr>
           <td>10</td>
           <td>Chill Guys</td>
-          <td>2</td>
+          <td>3</td>
           <td>0</td>
           <td>0</td>
-          <td>2</td>
+          <td>3</td>
           <td>0</td>
-          <td>2</td>
-          <td>-2</td>
+          <td>3</td>
+          <td>-3</td>
           <td>0</td>
-          <td>
-            <div class="form-indicator">
-              <div class="form-dot loss"></div>
-              <div class="form-dot loss"></div>
-              <div class="form-dot not-played"></div>
-              <div class="form-dot not-played"></div>
-              <div class="form-dot not-played"></div>
-            </div>
-          </td>
+          <td>🔴🔴🔴⚪⚪</td>
         </tr>
       </tbody>
     </table>
@@ -451,71 +371,32 @@
       <tbody>
         <tr>
           <td>1</td>
-        
           <td>Disguised Clowns</td>
-          <td>3</td>
-          <td>2</td>
-          <td>1</td>
-          <td>0</td>
-          <td>3</td>
-          <td>1</td>
-          <td>+2</td>
-          <td>7</td>
-          <td>
-            <div class="form-indicator">
-              <div class="form-dot win"></div>
-              <div class="form-dot win"></div>
-              <div class="form-dot not-played"></div>
-              <div class="form-dot not-played"></div>
-              <div class="form-dot not-played"></div>
-            </div>
-          </td>
-        </tr>
-        <tr>
-        <td>2</td>
-          
-          <td>Galahad Tridents</td>
-          <td>2</td>
-          <td>2</td>
-          <td>0</td>
-          <td>0</td>
-          <td>3</td>
-          <td>1</td>
-          <td>+2</td>
-          <td>6</td>
-          <td>
-            <div class="form-indicator">
-              <div class="form-dot win"></div>
-              <div class="form-dot win"></div>
-              <div class="form-dot draw"></div>
-              <div class="form-dot not-played"></div>
-              <div class="form-dot not-played"></div>
-            </div>
-          </td>
-        </tr>
-        <tr>
-          <td>3</td>
-          <td>Hypercraft FC</td>
-          <td>3</td>
-          <td>2</td>
-          <td>0</td>
-          <td>1</td>
-          <td>3</td>
-          <td>1</td>
-          <td>+2</td>
-          <td>6</td>
-          <td>
-            <div class="form-indicator">
-              <div class="form-dot win"></div>
-              <div class="form-dot loss"></div>
-              <div class="form-dot win"></div>
-              <div class="form-dot not-played"></div>
-              <div class="form-dot not-played"></div>
-            </div>
-          </td>
-        </tr>
-        <tr>
           <td>4</td>
+          <td>3</td>
+          <td>1</td>
+          <td>0</td>
+          <td>5</td>
+          <td>2</td>
+          <td>+3</td>
+          <td>10</td>
+          <td>🟢🟢🟡🟢⚪</td>
+        </tr>
+        <tr>
+          <td>2</td>
+          <td>Hypercraft CF</td>
+          <td>3</td>
+          <td>2</td>
+          <td>0</td>
+          <td>1</td>
+          <td>3</td>
+          <td>1</td>
+          <td>+2</td>
+          <td>6</td>
+          <td>🟢🔴🟢⚪⚪</td>
+        </tr>
+        <tr>
+          <td>3</td>
           <td>Dudhe Sona Ekadosh</td>
           <td>3</td>
           <td>2</td>
@@ -525,60 +406,36 @@
           <td>3</td>
           <td>+2</td>
           <td>6</td>
-          <td>
-            <div class="form-indicator">
-              <div class="form-dot win"></div>
-              <div class="form-dot loss"></div>
-              <div class="form-dot win"></div>
-              <div class="form-dot not-played"></div>
-              <div class="form-dot not-played"></div>
-            </div>
-          </td>
+          <td>🟢🔴🟢⚪⚪</td>
+        </tr>
+        <tr>
+          <td>4</td>
+          <td>Galahad Tridents</td>
+          <td>3</td>
+          <td>2</td>
+          <td>0</td>
+          <td>1</td>
+          <td>4</td>
+          <td>3</td>
+          <td>+1</td>
+          <td>6</td>
+          <td>🟢🟢🔴⚪⚪</td>
         </tr>
         <tr>
           <td>5</td>
-          <td>The Blues Tridents</td>
-          <td>3</td>
-          <td>1</td>
+          <td>Final Strike</td>
+          <td>4</td>
+          <td>2</td>
           <td>0</td>
           <td>2</td>
-          <td>3</td>
+          <td>4</td>
           <td>5</td>
-          <td>-2</td>
-          <td>3</td>
-          <td>
-            <div class="form-indicator">
-              <div class="form-dot loss"></div>
-              <div class="form-dot win"></div>
-              <div class="form-dot loss"></div>
-              <div class="form-dot not-played"></div>
-              <div class="form-dot not-played"></div>
-            </div>
-          </td>
+          <td>-1</td>
+          <td>6</td>
+          <td>🟢🔴🔴🟢⚪</td>
         </tr>
         <tr>
           <td>6</td>
-          <td>Final Strike</td>
-          <td>3</td>
-          <td>1</td>
-          <td>0</td>
-          <td>2</td>
-          <td>3</td>
-          <td>5</td>
-          <td>-2</td>
-          <td>3</td>
-          <td>
-            <div class="form-indicator">
-              <div class="form-dot win"></div>
-              <div class="form-dot loss"></div>
-              <div class="form-dot loss"></div>
-              <div class="form-dot not-played"></div>
-              <div class="form-dot not-played"></div>
-            </div>
-          </td>
-        </tr>
-        <tr>
-          <td>7</td>
           <td>Salta United</td>
           <td>2</td>
           <td>1</td>
@@ -588,36 +445,33 @@
           <td>2</td>
           <td>0</td>
           <td>3</td>
-          <td>
-            <div class="form-indicator">
-              <div class="form-dot loss"></div>
-              <div class="form-dot win"></div>
-              <div class="form-dot not-played"></div>
-              <div class="form-dot not-played"></div>
-              <div class="form-dot not-played"></div>
-            </div>
-          </td>
+          <td>🔴🟢⚪⚪⚪</td>
+        </tr>
+        <tr>
+          <td>7</td>
+          <td>The Blues Tridents</td>
+          <td>3</td>
+          <td>1</td>
+          <td>0</td>
+          <td>2</td>
+          <td>3</td>
+          <td>5</td>
+          <td>-2</td>
+          <td>3</td>
+          <td>🔴🟢🔴⚪⚪</td>
         </tr>
         <tr>
           <td>8</td>
           <td>Chuha Gang</td>
-          <td>3</td>
+          <td>4</td>
           <td>0</td>
           <td>2</td>
-          <td>1</td>
-          <td>1</td>
           <td>2</td>
-          <td>-1</td>
+          <td>1</td>
+          <td>3</td>
+          <td>-2</td>
           <td>2</td>
-          <td>
-            <div class="form-indicator">
-              <div class="form-dot loss"></div>
-              <div class="form-dot draw"></div>
-              <div class="form-dot draw"></div>
-              <div class="form-dot not-played"></div>
-              <div class="form-dot not-played"></div>
-            </div>
-          </td>
+          <td>🔴🟡🟡🔴⚪</td>
         </tr>
         <tr>
           <td>9</td>
@@ -630,15 +484,7 @@
           <td>1</td>
           <td>-1</td>
           <td>1</td>
-          <td>
-            <div class="form-indicator">
-              <div class="form-dot loss"></div>
-              <div class="form-dot draw"></div>
-              <div class="form-dot not-played"></div>
-              <div class="form-dot not-played"></div>
-              <div class="form-dot not-played"></div>
-            </div>
-          </td>
+          <td>🔴🟡⚪⚪⚪</td>
         </tr>
         <tr>
           <td>10</td>
@@ -651,15 +497,7 @@
           <td>4</td>
           <td>-2</td>
           <td>0</td>
-          <td>
-            <div class="form-indicator">
-              <div class="form-dot loss"></div>
-              <div class="form-dot loss"></div>
-              <div class="form-dot not-played"></div>
-              <div class="form-dot not-played"></div>
-              <div class="form-dot not-played"></div>
-            </div>
-          </td>
+          <td>🔴🔴⚪⚪⚪</td>
         </tr>
       </tbody>
     </table>
